feat: link transactions table with api

--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -3,4 +3,8 @@
     <h2 class="home-subtitle">Nueva Transacción</h2>
     <app-new-transaction-form />
   </section>
+  <section class="card col-span-2">
+    <h2 class="home-subtitle">Lista de Transacciones</h2>
+    <app-transactions-table />
+  </section>
 </div>
