--- a/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
@@ -1,1 +1,22 @@
-<p>transactions-table works!</p>
+<div class="table">
+  <table>
+    <thead>
+      <tr>
+        <th class="id">ID</th>
+        <th>Nota</th>
+        <th>Tipo</th>
+        <th>Valor</th>
+        <th>Fecha y Hora</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let transaction of transactions()">
+        <td class="id">{{ transaction.id }}</td>
+        <td>{{ transaction.description }}</td>
+        <td>{{ transaction.type }}</td>
+        <td>{{ transaction.value | currency : "symbol" : "$" : "0.00" }}</td>
+        <td>{{ transaction.date | date : "dd/MM/yyyy, hh:mm a" }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
