--- a/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
@@ -1,28 +1,38 @@
-<form class="form">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="description">Nota</label>
-    <input type="text" class="input" id="description" />
+    <input
+      type="text"
+      class="input"
+      id="description"
+      formControlName="description"
+    />
   </div>
   <div class="control">
     <label for="type">Tipo</label>
-    <select class="input" id="type">
-      <option selected>Depósito</option>
-      <option>Retiro</option>
+    <select class="input" id="type" formControlName="type">
+      <option value="DEPOSIT">Depósito</option>
+      <option value="WITHDRAWAL">Retiro</option>
     </select>
   </div>
   <div class="grid grid-cols-2 gap-3">
     <div class="control">
       <label for="value">Valor</label>
-      <input type="number" class="input" id="value" />
+      <input type="number" class="input" id="value" formControlName="value" />
     </div>
     <div class="control">
       <label for="commission">Adicional</label>
-      <input type="number" id="commission" class="input" />
+      <input
+        type="number"
+        id="commission"
+        class="input"
+        formControlName="commission"
+      />
     </div>
   </div>
   <div class="control">
     <label for="time">Hora</label>
-    <input type="time" id="time" class="input" />
+    <input type="time" id="time" class="input" formControlName="date" />
   </div>
   <app-button type="submit" class="mt-3">Guardar Transacción</app-button>
 </form>
