design: descriptions dropdown

--- a/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
@@ -1,5 +1,5 @@
 <form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="control">
+  <div class="relative control">
     <label for="description">Nota</label>
     <input
       type="text"
@@ -7,6 +7,16 @@
       id="description"
       formControlName="description"
     />
+    <ul
+      class="absolute top-20 w-full px-2 py-2 bg-white rounded-xl drop-shadow flex flex-col"
+    >
+      <li
+        *ngFor="let description of descriptions()"
+        class="text-gray-700 text-lg px-2 py-0.5 rounded cursor-pointer hover:bg-violet-500 hover:text-white"
+      >
+        {{ description }}
+      </li>
+    </ul>
   </div>
   <div class="control">
     <label for="type">Tipo</label>
