--- a/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
@@ -10,7 +10,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let transaction of transactions()">
+      <tr *ngFor="let transaction of details()">
         <td class="id">{{ transaction.id }}</td>
         <td>{{ transaction.description }}</td>
         <td>{{ transaction.type }}</td>
