--- a/src/app/modules/admin/pages/administration/components/adm-item-card/adm-item-card.component.html
+++ b/src/app/modules/admin/pages/administration/components/adm-item-card/adm-item-card.component.html
@@ -3,7 +3,7 @@
     <h4 class="text-2xl text-violet-700 font-medium">
       <ng-content />
     </h4>
-    <div class="relative z-10">
+    <div class="relative z-10" *ngIf="options.length > 0">
       <fa-icon
         [icon]="faOptions"
         size="xl"
@@ -13,7 +13,6 @@
       <ul
         class="absolute z-20 bg-white drop-shadow right-0 rounded-lg py-2 min-w-40 flex flex-col gap-0.5"
         [ngClass]="showDropdown() ? 'block' : 'hidden'"
-        *ngIf="options.length > 0"
       >
         <li *ngFor="let option of options">
           <a
