--- a/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/transactions-table/transactions-table.component.html
@@ -5,8 +5,8 @@
         <th class="id">ID</th>
         <th>Nota</th>
         <th>Tipo</th>
-        <th>Valor</th>
-        <th>Adicional</th>
+        <th class="text-right">Valor</th>
+        <th class="text-right">Adicional</th>
         <th>Hora</th>
       </tr>
     </thead>
