fix: table number width

--- a/src/app/modules/admin/pages/dashboard/components/safes-stats-table/safes-stats-table.component.html
+++ b/src/app/modules/admin/pages/dashboard/components/safes-stats-table/safes-stats-table.component.html
@@ -3,7 +3,7 @@
     <thead>
       <tr>
         <th class="id">ID</th>
-        <th class="w-40 text-center">Número de caja</th>
+        <th class="text-center">Número de caja</th>
         <th class="text-center">Transferencias</th>
         <th class="text-right">Base Inicial</th>
         <th class="text-right">Base Final</th>
