--- a/src/app/modules/admin/pages/safes/components/safes-table/safes-table.component.html
+++ b/src/app/modules/admin/pages/safes/components/safes-table/safes-table.component.html
@@ -5,7 +5,7 @@
       <thead>
         <tr>
           <th class="id">ID</th>
-          <th class="w-40 text-center">Número de caja</th>
+          <th class="text-center">Número de caja</th>
           <th>Fecha de creación</th>
         </tr>
       </thead>
