update: cash register card to show the current balance

--- a/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
@@ -2,7 +2,9 @@
   <li *ngFor="let detail of cashRegisterDetails(); index as i">
     <app-adm-item-card
       [options]="options"
-      [finalBalance]="detail.finalBase ?? 0"
+      [finalBalance]="
+        detail.finalBase! > 0 ? detail.finalBase! : detail.initialBase
+      "
       (setSelectedItem)="setSelectedCashRegisterDetail(i)"
       >Caja {{ detail.cashRegister.numeral }}</app-adm-item-card
     >
