--- a/src/app/modules/admin/pages/administration/pages/safes/components/update-base-form/update-base-form.component.html
+++ b/src/app/modules/admin/pages/administration/pages/safes/components/update-base-form/update-base-form.component.html
@@ -1,49 +1,1 @@
-<form class="flex items-start gap-5" [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="form">
-    <div class="control-row" *ngFor="let base of base().slice(0, 6)">
-      <label [for]="base.title" class="w-20 text-right">{{
-        base.value | currency : "symbol" : "$" : "0.00"
-      }}</label>
-      <div class="relative">
-        <input
-          type="number"
-          [id]="base.title"
-          class="input max-w-44"
-          [formControlName]="base.title"
-          placeholder="0"
-        />
-        <div
-          class="absolute z-10 right-px top-px h-[calc(100%_-_2px)] w-32 rounded-e-lg px-4 py-2 bg-violet-200"
-        >
-          <p class="text-gray-700 text-right">
-            {{ base.total | currency : "symbol" : "$" : "0.00" }}
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="form">
-    <div class="control-row" *ngFor="let base of base().slice(6, 11)">
-      <label [for]="base.title" class="w-20 text-right">{{
-        base.value | currency : "symbol" : "$" : "0.00"
-      }}</label>
-      <div class="relative">
-        <input
-          type="number"
-          [id]="base.title"
-          class="input max-w-48"
-          [formControlName]="base.title"
-          placeholder="0"
-        />
-        <div
-          class="absolute z-10 right-px top-px h-[calc(100%_-_2px)] w-32 rounded-e-lg px-4 py-2 bg-violet-200"
-        >
-          <p class="text-gray-700 text-right">
-            {{ base.total | currency : "symbol" : "$" : "0.00" }}
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <input type="submit" value="send" class="sr-only" />
-</form>
+<app-adm-base-calculator [base]="base()" [form]="form" (submit)="onSubmit()" />
