--- a/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
+++ b/src/app/modules/admin/pages/administration/pages/cash-registers/cash-registers.component.html
@@ -38,4 +38,6 @@
 </ul>
 <app-update-cash-register-base-modal
   [cashRegisterDetail]="selectedCashRegisterDetail()"
+  [timeForm]="timeForm"
+  (onSubmit)="closeCashRegisterDetail()"
 />
