--- a/src/app/modules/admin/pages/administration/pages/safes/components/update-base-form/update-base-form.component.html
+++ b/src/app/modules/admin/pages/administration/pages/safes/components/update-base-form/update-base-form.component.html
@@ -1,1 +1,6 @@
-<app-adm-base-calculator [base]="base()" [form]="form" (submit)="onSubmit()" />
+<app-adm-base-calculator
+  [base]="base()"
+  [form]="form"
+  [baseDetail]="baseDetail()"
+  (submit)="onSubmit()"
+/>
