--- a/src/app/modules/admin/pages/home/home.component.html
+++ b/src/app/modules/admin/pages/home/home.component.html
@@ -7,24 +7,24 @@
     <app-product-card
       pTitle="Plataformas"
       [pIcon]="faPlatforms"
-      pRoute="../plataformas"
+      pRoute="./plataformas"
     />
   </li>
   <li>
     <app-product-card
       pTitle="Cajas Registradoras"
       [pIcon]="faCashRegister"
-      pRoute="../cajas-registradoras"
+      pRoute="./cajas-registradoras"
     />
   </li>
   <li>
     <app-product-card
       pTitle="Cajas Fuertes"
       [pIcon]="faCashSafe"
-      pRoute="../cajas-fuertes"
+      pRoute="./cajas-fuertes"
     />
   </li>
   <li>
-    <app-product-card pTitle="Usuarios" [pIcon]="faUser" pRoute="../usuarios" />
+    <app-product-card pTitle="Usuarios" [pIcon]="faUser" pRoute="./usuarios" />
   </li>
 </ul>
