refactor: convert movements into subcomponents and add loading spinner

--- a/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/cash-register-movements.component.html
+++ b/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/cash-register-movements.component.html
@@ -2,27 +2,20 @@
   [hTitle]="title()"
   hDescription="Podrás ver un listado de todos los movimientos realizados a través de la caja registradora"
 />
-<section class="w-full">
+<ng-template #spinner> <app-spinner /> </ng-template>
+<section class="w-full" *ngIf="!loading(); else spinner">
   <header class="mb-3">
     <h3 class="text-2xl text-gray-700 font-medium">Listado de movimientos</h3>
   </header>
   <div class="card">
-    <ul class="flex flex-col gap-5">
-      <li
-        *ngFor="let detail of cashRegisterDetails()"
-        class="bg-violet-50 px-6 py-3 rounded-xl"
-      >
-        <a
-          class="flex items-center justify-between text-xl text-gray-700 hover:text-violet-800 hover:underline"
-          [routerLink]="['./', detail.id]"
-        >
-          <span class="font-medium">ID {{ detail.id }}</span>
-          <span>{{ detail.initialWorking | date : "hh:mm" }}</span>
-          <span>{{ detail.createdBy }}</span>
-          <span>{{ detail.status | cashRegisterDetailStatus }}</span>
-          <span>{{ detail.createdDate | date : "dd/MM/yyyy" }}</span>
-        </a>
-      </li>
-    </ul>
+    <app-cash-register-movements-list
+      [cashRegisterDetails]="cashRegisterDetails()"
+      *ngIf="cashRegisterDetails().length > 0; else noDetails"
+    />
+    <ng-template #noDetails>
+      <p class="text-center text-3xl text-gray-700 font-medium py-32">
+        Parece que no hay movimientos...
+      </p>
+    </ng-template>
   </div>
 </section>
