feat: new loading component

--- a/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/cash-register-movements.component.html
+++ b/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/cash-register-movements.component.html
@@ -1,4 +1,4 @@
-<app-spinner *ngIf="loading(); else page" />
+<app-loading *ngIf="loading(); else page" />
 <ng-template #page>
   <app-header-title
     [hTitle]="title()"
