feat: link endpoint to get full detailed reports by a cash register detail id

--- a/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
+++ b/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
@@ -1,1 +1,7 @@
-<p>cash-register-details works!</p>
+<app-loading *ngIf="loading(); else page" />
+<ng-template #page>
+  <pre>
+     {{ text() }}
+    </pre
+  >
+</ng-template>
