feat: header stats for cash register detailed reports

--- a/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
+++ b/src/app/modules/admin/pages/home/pages/cash-registers/pages/cash-register-movements/pages/cash-register-details/cash-register-details.component.html
@@ -1,7 +1,5 @@
 <app-loading *ngIf="loading(); else page" />
 <ng-template #page>
-  <pre>
-     {{ text() }}
-    </pre
-  >
+  <div class="pt-6"></div>
+  <app-header-stats [reports]="reports()?.reports" />
 </ng-template>
