--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/components/cash-register-movement/cash-register-movement.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/components/cash-register-movement/cash-register-movement.component.html
@@ -1,7 +1,7 @@
 <li class="bg-violet-50 px-8 py-6 rounded-xl">
   <a
     class="flex items-center justify-between text-xl text-gray-700 hover:text-violet-800 hover:underline"
-    [routerLink]="['./', cashRegisterDetail.id]"
+    [routerLink]="['./reportes', cashRegisterDetail.id]"
   >
     <span class="font-medium">ID {{ cashRegisterDetail.id }}</span>
     <span>{{ cashRegisterDetail.initialWorking | date : "hh:mm" }}</span>
