feat: design new cash transfer form and update home columns width

--- a/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
@@ -1,9 +1,9 @@
 <div class="home-container">
-  <section class="card col-span-1">
+  <section class="card">
     <h2 class="home-subtitle">Nuevo Gasto</h2>
     <app-new-expense-form />
   </section>
-  <section class="card col-span-2">
+  <section class="card">
     <h2 class="home-subtitle">Lista de Gastos</h2>
     <app-expenses-table />
   </section>
