--- a/src/app/modules/portal/pages/home/pages/transfers/transfers.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/transfers.component.html
@@ -1,1 +1,6 @@
-<p>transfers works!</p>
+<div class="home-container">
+  <section class="card">
+    <h2 class="home-subtitle">Nueva Transferencia</h2>
+    <app-new-transfer-form />
+  </section>
+</div>
