--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -1,9 +1,9 @@
 <div class="home-container">
-  <section class="card col-span-1">
+  <section class="card">
     <h2 class="home-subtitle">Nueva Transacción</h2>
     <app-new-transaction-form />
   </section>
-  <section class="card col-span-2">
+  <section class="card">
     <h2 class="home-subtitle">Lista de Transacciones</h2>
     <app-transactions-table />
   </section>
