--- a/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -1,47 +1,42 @@
 <form class="form">
-  <div class="grid grid-cols-9 gap-3">
-    <div class="control col-span-4">
-      <label for="cash-from">Tipo de Caja</label>
-      <select id="cash-from" class="input" (change)="setSelectedType($event)">
-        <option value="CASH_REGISTER">Registradora</option>
-        <option value="SAFE">Fuerte</option>
-      </select>
-    </div>
-    <div class="control col-span-5">
-      <label for="cash-register">Cajas</label>
-      <select id="cash-register" class="input">
+  <div class="control">
+    <label for="cash-from">Tipo de Caja</label>
+    <select id="cash-from" class="input" (change)="setSelectedType($event)">
+      <option value="CASH_REGISTER">Registradora</option>
+      <option value="SAFE">Fuerte</option>
+    </select>
+  </div>
+  <div class="control">
+    <label for="cash-register">Cajas Disponibles</label>
+    <select id="cash-register" class="input">
+      <ng-container *ngIf="selectedType() === 'CASH_REGISTER'; else safes">
         <option
           *ngFor="let cashRegister of availableTransfers()?.cashRegisters"
           [value]="cashRegister.id"
         >
           {{ cashRegister.user.name }} {{ cashRegister.user.lastName }}
         </option>
-      </select>
-    </div>
-  </div>
-  <div class="control">
-    <label for="safe">Cajas Fuertes</label>
-    <select id="safe" class="input">
-      <option
-        *ngFor="let safe of availableTransfers()?.safes"
-        [value]="safe.id"
-      >
-        Caja Fuerte N° {{ safe.safe.numeral }}
-      </option>
+      </ng-container>
+      <ng-template #safes>
+        <option
+          *ngFor="let safe of availableTransfers()?.safes"
+          [value]="safe.id"
+        >
+          Caja Fuerte N° {{ safe.safe.numeral }}
+        </option>
+      </ng-template>
     </select>
   </div>
-  <div class="grid grid-cols-2 gap-3">
-    <div class="control">
-      <label for="type">¿Recibes o Entregas?</label>
-      <select id="type" class="input">
-        <option value="RECEIVE">Recibo</option>
-        <option value="DELIVER">Entrego</option>
-      </select>
-    </div>
-    <div class="control">
-      <label for="value">Valor</label>
-      <input type="number" id="value" class="input" />
-    </div>
+  <div class="control col-span-4">
+    <label for="type">¿Recibes o Entregas?</label>
+    <select id="type" class="input">
+      <option value="RECEIVE">Recibo</option>
+      <option value="DELIVER">Entrego</option>
+    </select>
+  </div>
+  <div class="control col-span-5">
+    <label for="value">Valor</label>
+    <input type="number" id="value" class="input" placeholder="$0" />
   </div>
   <app-button type="submit" class="mt-3">Registrar Transferencia</app-button>
 </form>
