--- a/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -27,14 +27,14 @@
       </ng-template>
     </select>
   </div>
-  <div class="control col-span-4">
+  <div class="control">
     <label for="type">¿Recibes o Entregas?</label>
     <select id="type" class="input">
       <option value="RECEIVE">Recibo</option>
       <option value="DELIVER">Entrego</option>
     </select>
   </div>
-  <div class="control col-span-5">
+  <div class="control">
     <label for="value">Valor</label>
     <input type="number" id="value" class="input" placeholder="$0" />
   </div>
