--- a/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -29,14 +29,36 @@
   </div>
   <div class="control">
     <label for="type">¿Recibes o Entregas?</label>
-    <select id="type" class="input">
+    <select id="type" class="input" (change)="setReceive($event)">
       <option value="RECEIVE">Recibo</option>
       <option value="DELIVER">Entrego</option>
     </select>
   </div>
   <div class="control">
     <label for="value">Valor</label>
-    <input type="number" id="value" class="input" placeholder="$0" />
+    <input
+      type="number"
+      id="value"
+      class="input"
+      placeholder="$0"
+      *ngIf="selectedType() === 'CASH_REGISTER'"
+    />
+    <select id="value" class="input" *ngIf="selectedType() === 'SAFE'">
+      <option disabled selected>Selecciona un monto</option>
+      <option value="hundredThousand">$10.000.000</option>
+      <option value="fiftyThousand">$5.000.000</option>
+      <option value="twentyThousand">$2.000.000</option>
+      <option value="tenThousand">$1.000.000</option>
+      <option value="fiveThousand">$500.000</option>
+      <option value="twoThousand">$200.000</option>
+      <option value="thousand">$100.000</option>
+      <option value="fiveHundred">$50.000</option>
+      <option value="twoHundred">$20.000</option>
+      <option value="thousand">$10.000</option>
+      <option value="fifty">$5.000</option>
+    </select>
   </div>
-  <app-button type="submit" class="mt-3">Registrar Transferencia</app-button>
+  <app-button type="submit" class="mt-3"
+    >{{ receive() ? "Recibir" : "Entregar" }} Transferencia</app-button
+  >
 </form>
