--- a/src/app/modules/portal/pages/home/pages/transfers/transfers.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/transfers.component.html
@@ -3,4 +3,8 @@
     <h2 class="home-subtitle">Nueva Transferencia</h2>
     <app-new-cash-transfer-form />
   </section>
+  <section class="card">
+    <h2 class="home-subtitle">Mis Transferencias</h2>
+    <app-cash-transfers-table />
+  </section>
 </div>
