--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -4,7 +4,7 @@
     <app-new-transaction-form />
   </section>
   <section class="card">
-    <h2 class="home-subtitle">Lista de Transacciones</h2>
+    <h2 class="home-subtitle">Mis Transacciones</h2>
     <app-transactions-table />
   </section>
 </div>
