--- a/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -1,15 +1,33 @@
-<form class="form">
+<form class="form" [formGroup]="form" (ngSubmit)="emitSubmit()">
+  <div class="control">
+    <label for="type">¿Recibes o Entregas?</label>
+    <select
+      id="type"
+      class="input"
+      (change)="setReceive($event)"
+      formControlName="receive"
+    >
+      <option value="true">Recibo</option>
+      <option value="false">Entrego</option>
+    </select>
+  </div>
   <div class="control">
     <label for="cash-from">Tipo de Caja</label>
-    <select id="cash-from" class="input" (change)="setSelectedType($event)">
+    <select
+      id="cash-from"
+      class="input"
+      (change)="setSelectedType($event)"
+      formControlName="cashBoxType"
+    >
       <option value="CASH_REGISTER">Registradora</option>
       <option value="SAFE">Fuerte</option>
     </select>
   </div>
   <div class="control">
-    <label for="cash-register">Cajas Disponibles</label>
-    <select id="cash-register" class="input">
+    <label for="cash-box">Cajas Disponibles</label>
+    <select id="cash-box" class="input" formControlName="cashier">
       <ng-container *ngIf="selectedType() === 'CASH_REGISTER'; else safes">
+        <option [value]="0" disabled selected>Selecciona un cajero</option>
         <option
           *ngFor="let cashRegister of availableTransfers()?.cashRegisters"
           [value]="cashRegister.id"
@@ -18,6 +36,7 @@
         </option>
       </ng-container>
       <ng-template #safes>
+        <option [value]="0" disabled selected>Selecciona una caja</option>
         <option
           *ngFor="let safe of availableTransfers()?.safes"
           [value]="safe.id"
@@ -28,23 +47,22 @@
     </select>
   </div>
   <div class="control">
-    <label for="type">¿Recibes o Entregas?</label>
-    <select id="type" class="input" (change)="setReceive($event)">
-      <option value="RECEIVE">Recibo</option>
-      <option value="DELIVER">Entrego</option>
-    </select>
-  </div>
-  <div class="control">
     <label for="value">Valor</label>
     <input
       type="number"
       id="value"
       class="input"
       placeholder="$0"
+      formControlName="value"
       *ngIf="selectedType() === 'CASH_REGISTER'"
     />
-    <select id="value" class="input" *ngIf="selectedType() === 'SAFE'">
-      <option disabled selected>Selecciona un monto</option>
+    <select
+      id="value"
+      class="input"
+      *ngIf="selectedType() === 'SAFE'"
+      formControlName="safeValue"
+    >
+      <option value="" disabled selected>Selecciona un monto</option>
       <option value="hundredThousand">$10.000.000</option>
       <option value="fiftyThousand">$5.000.000</option>
       <option value="twentyThousand">$2.000.000</option>
