feat: link endpoint with new cash transfer form and fix some bugs

--- a/src/app/modules/portal/pages/home/pages/transfers/components/cash-transfers-table/cash-transfers-table.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/cash-transfers-table/cash-transfers-table.component.html
@@ -16,7 +16,7 @@
           }}{{ transfer.value | currency : "symbol" : "$" : "0.00" }}
         </td>
         <td>{{ transfer.received ? transfer.sender : transfer.receiver }}</td>
-        <td>{{ transfer.createdDate | date : "hh:mm" }}</td>
+        <td>{{ transfer.createdDate | date : "hh:mm aa" }}</td>
       </tr>
     </tbody>
   </table>
