--- a/src/app/modules/portal/pages/home/pages/transfers/transfers.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/transfers.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
   <section class="card">
     <h2 class="home-subtitle">Nueva Transferencia</h2>
-    <app-new-cash-transfer-form (onSubmit)="onSubmit($event)" />
+    <app-new-cash-transfer-form />
   </section>
   <section class="card">
     <h2 class="home-subtitle">Mis Transferencias</h2>
