--- a/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form" (ngSubmit)="emitSubmit()">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="type">¿Recibes o Entregas?</label>
     <select
@@ -76,7 +76,7 @@
       <option value="fifty">$5.000</option>
     </select>
   </div>
-  <app-button type="submit" class="mt-3"
+  <app-button type="submit" class="mt-3" [loading]="loading()"
     >{{ receive() ? "Recibir" : "Entregar" }} Transferencia</app-button
   >
 </form>
