--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-spinner *ngIf="loading(); else page" />
+<app-loading *ngIf="loading(); else page" />
 <ng-template #page>
   <section
     *ngIf="open() === false; else home"
