--- a/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
@@ -3,8 +3,11 @@
     <h2 class="home-subtitle">Nuevo Gasto</h2>
     <app-new-expense-form />
   </section>
-  <section class="card">
-    <h2 class="home-subtitle">Mis Gastos</h2>
-    <app-expenses-table />
+  <section class="card flex items-center justify-center">
+    <ng-template #spinner> <app-spinner /></ng-template>
+    <div class="w-full h-full" *ngIf="!loading(); else spinner">
+      <h2 class="home-subtitle">Mis Gastos</h2>
+      <app-expenses-table />
+    </div>
   </section>
 </div>
